@@ -1,6 +1,37 @@
 # file GENERATED by distutils, do NOT edit
+CHANGES.txt
+LICENSE.txt
 README
 setup.py
+docs/html/.DS_Store
+docs/html/.buildinfo
+docs/html/genindex.html
+docs/html/index.html
+docs/html/np-modindex.html
+docs/html/objects.inv
+docs/html/py-modindex.html
+docs/html/search.html
+docs/html/searchindex.js
+docs/html/.doctrees/environment.pickle
+docs/html/.doctrees/index.doctree
+docs/html/.doctrees/source/algorithms.doctree
+docs/html/.doctrees/source/gmm.doctree
+docs/html/_sources/index.txt
+docs/html/_sources/source/algorithms.txt
+docs/html/_sources/source/gmm.txt
+docs/html/_static/basic.css
+docs/html/_static/default.css
+docs/html/_static/doctools.js
+docs/html/_static/file.png
+docs/html/_static/jquery.js
+docs/html/_static/minus.png
+docs/html/_static/plus.png
+docs/html/_static/pygments.css
+docs/html/_static/searchtools.js
+docs/html/_static/sidebar.js
+docs/html/_static/underscore.js
+docs/html/source/algorithms.html
+docs/html/source/gmm.html
 gmm/__init__.py
 gmm/algorithms.py
 gmm/gmm.py
