@@ -30,5 +30,4 @@ Contact
 
  - Author:  Drew Conway
  - Email:   drew.conway@nyu.edu
- - Date:    2011-04-22
 
