@@ -46,9 +46,9 @@ copyright = u'2011, Drew Conway'
 #
 # The short X.Y version.
 import gmm
-version = '0.3.1'
+version = '0.3.3'
 # The full version, including alpha/beta/rc tags.
-release = '0.3.1'
+release = '0.3.3'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
