@@ -7,13 +7,13 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Welcome to gmm’s documentation! &mdash; gmm v0.3.1 documentation</title>
+    <title>Welcome to gmm’s documentation! &mdash; gmm v0.3.3 documentation</title>
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
-        VERSION:     '0.3.1',
+        VERSION:     '0.3.3',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="gmm v0.3.1 documentation" href="#" />
+    <link rel="top" title="gmm v0.3.3 documentation" href="#" />
     <link rel="next" title="Graph Motif Model (gmm)" href="source/gmm.html" /> 
   </head>
   <body>
@@ -41,7 +41,7 @@
         <li class="right" >
           <a href="source/gmm.html" title="Graph Motif Model (gmm)"
              accesskey="N">next</a> |</li>
-        <li><a href="#">gmm v0.3.1 documentation</a> &raquo;</li> 
+        <li><a href="#">gmm v0.3.3 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -123,7 +123,7 @@
         <li class="right" >
           <a href="source/gmm.html" title="Graph Motif Model (gmm)"
              >next</a> |</li>
-        <li><a href="#">gmm v0.3.1 documentation</a> &raquo;</li> 
+        <li><a href="#">gmm v0.3.3 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
