@@ -7,13 +7,13 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Python Module Index &mdash; gmm v0.3.1 documentation</title>
+    <title>Python Module Index &mdash; gmm v0.3.3 documentation</title>
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
-        VERSION:     '0.3.1',
+        VERSION:     '0.3.3',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="gmm v0.3.1 documentation" href="index.html" />
+    <link rel="top" title="gmm v0.3.3 documentation" href="index.html" />
  
 
 
@@ -40,7 +40,7 @@
         <li class="right" >
           <a href="np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">gmm v0.3.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">gmm v0.3.3 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -113,7 +113,7 @@
         <li class="right" >
           <a href="np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">gmm v0.3.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">gmm v0.3.3 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
