@@ -7,13 +7,13 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>algorithms &mdash; gmm v0.3.1 documentation</title>
+    <title>algorithms &mdash; gmm v0.3.3 documentation</title>
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.3.1',
+        VERSION:     '0.3.3',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
-    <link rel="top" title="gmm v0.3.1 documentation" href="../index.html" />
+    <link rel="top" title="gmm v0.3.3 documentation" href="../index.html" />
     <link rel="prev" title="Graph Motif Model (gmm)" href="gmm.html" /> 
   </head>
   <body>
@@ -41,7 +41,7 @@
         <li class="right" >
           <a href="gmm.html" title="Graph Motif Model (gmm)"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">gmm v0.3.1 documentation</a> &raquo;</li> 
+        <li><a href="../index.html">gmm v0.3.3 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -58,7 +58,7 @@
 Email:    <a class="reference external" href="mailto:drew&#46;conway&#37;&#52;&#48;nyu&#46;edu">drew<span>&#46;</span>conway<span>&#64;</span>nyu<span>&#46;</span>edu</a></p>
 <dl class="function">
 <dt id="gmm.algorithms.simulate">
-<tt class="descclassname">gmm.algorithms.</tt><tt class="descname">simulate</tt><big>(</big><em>gmm</em>, <em>tau</em>, <em>poisson=True</em>, <em>new_name='GMM Simulation'</em><big>)</big><a class="headerlink" href="#gmm.algorithms.simulate" title="Permalink to this definition">¶</a></dt>
+<tt class="descclassname">gmm.algorithms.</tt><tt class="descname">simulate</tt><big>(</big><em>gmm</em>, <em>tau</em>, <em>poisson=True</em>, <em>seed=None</em>, <em>new_name='GMM Simulation'</em><big>)</big><a class="headerlink" href="#gmm.algorithms.simulate" title="Permalink to this definition">¶</a></dt>
 <dd><p>The primary function for generating networks using the graph motif modeling technique.  
 The function takes two arguments, a gmm object and a tau value, and returns a NetworkX 
 graph object based on the construct of the gmm passed.</p>
@@ -71,6 +71,12 @@ graph object based on the construct of the gmm passed.</p>
 <blockquote>
 <div><p>motifs for the simulation.</p>
 </div></blockquote>
+<p><strong>poisson</strong> : A boolean value to declarse whether to use a Poisson probability mass when</p>
+<blockquote>
+<div><p>calculating the motif distributions during the simulation</p>
+</div></blockquote>
+<p><strong>seed</strong> : int or array_like value to set the random seed for NumPy <cite>RandomState</cite></p>
+<p><strong>new_name</strong> : A string, the name the new graph generated by the simulation</p>
 </td>
 </tr>
 <tr class="field"><th class="field-name">Returns :</th><td class="field-body"><p class="first"><strong>gmm_sim</strong> : A NetworkX graph object derived from a graph motif model simualtion on a</p>
@@ -269,7 +275,7 @@ base structure.  This method will prevent that outcome.</p>
         <li class="right" >
           <a href="gmm.html" title="Graph Motif Model (gmm)"
              >previous</a> |</li>
-        <li><a href="../index.html">gmm v0.3.1 documentation</a> &raquo;</li> 
+        <li><a href="../index.html">gmm v0.3.3 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
