@@ -7,13 +7,13 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Graph Motif Model (gmm) &mdash; gmm v0.3.1 documentation</title>
+    <title>Graph Motif Model (gmm) &mdash; gmm v0.3.3 documentation</title>
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.3.1',
+        VERSION:     '0.3.3',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
-    <link rel="top" title="gmm v0.3.1 documentation" href="../index.html" />
+    <link rel="top" title="gmm v0.3.3 documentation" href="../index.html" />
     <link rel="next" title="algorithms" href="algorithms.html" />
     <link rel="prev" title="Welcome to gmm’s documentation!" href="../index.html" /> 
   </head>
@@ -45,7 +45,7 @@
         <li class="right" >
           <a href="../index.html" title="Welcome to gmm’s documentation!"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">gmm v0.3.1 documentation</a> &raquo;</li> 
+        <li><a href="../index.html">gmm v0.3.3 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -254,7 +254,7 @@ return current base graph.</p>
         <li class="right" >
           <a href="../index.html" title="Welcome to gmm’s documentation!"
              >previous</a> |</li>
-        <li><a href="../index.html">gmm v0.3.1 documentation</a> &raquo;</li> 
+        <li><a href="../index.html">gmm v0.3.3 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
