@@ -15,10 +15,10 @@ __docformat__ = "restructuredtext en"
 
 import copy
 import networkx as nx
-from scipy import random,stats
-from numpy import mean
+from numpy import mean, random
+from scipy import stats
 
-def simulate(gmm,tau,poisson=True,new_name="GMM Simulation"):
+def simulate(gmm, tau, poisson=True, seed=None, new_name="GMM Simulation"):
     """
     The primary function for generating networks using the graph motif modeling technique.  
     The function takes two arguments, a gmm object and a tau value, and returns a NetworkX 
@@ -30,6 +30,13 @@ def simulate(gmm,tau,poisson=True,new_name="GMM Simulation"):
     
     tau : An number greater than or equal to two, which is used to generate a set of graph 
         motifs for the simulation.
+        
+    poisson : A boolean value to declarse whether to use a Poisson probability mass when 
+        calculating the motif distributions during the simulation
+        
+    seed : int or array_like value to set the random seed for NumPy `RandomState`
+    
+    new_name : A string, the name the new graph generated by the simulation
     
     Returns
     ----------
@@ -46,6 +53,8 @@ def simulate(gmm,tau,poisson=True,new_name="GMM Simulation"):
             raise ValueError("The value for tau must be greater than or equal to two")
         else:
             # Do simulation
+            if seed is not None:
+                random.seed(seed)
             while gmm.apply_termination():
                 motif_dist=motif_counts(gmm,tau)    # Raw motif counts from gmm base graph
                 # Poission PMF used to estimate mass for all motifs? (default)
@@ -234,9 +243,9 @@ def poisson_mass(motif_counts):
     base structure.  This method will prevent that outcome.
     """
     counts=[(c) for (a,b,c) in motif_counts]
-    estimate=mean(counts)
+    mu=counts.index(max(counts))
     # Use SciPy's Poisson PMF calculation function
-    motif_pmf=map(lambda x: stats.poisson.pmf(x,estimate),range(len(counts)))
+    motif_pmf=map(lambda x: stats.poisson.pmf(x,mu),range(len(counts)))
     for i in range(len(motif_pmf)):
         motif_counts[i]=(motif_counts[i][0],motif_counts[i][1],motif_pmf[i])
     return(motif_counts)
